@@ -212,13 +212,6 @@ signals:
     /// This signal is emitted when the client state changes.
     void stateChanged(QXmppClient::State state);
 
-    /// \cond
-    // Deprecated in release 0.3.0
-    // Use QXmppDiscoveryManager::informationReceived(const QXmppDiscoveryIq&)
-    // Notifies that an XMPP service discovery iq stanza is received.
-    void discoveryIqReceived(const QXmppDiscoveryIq&);
-    /// \endcond
-
 public slots:
     void connectToServer(const QString &jid,
                          const QString &password);
